kubernetes/mlflow-deployment.yaml
# kubernetes/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: hallucination-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: mlflow-local:latest
        imagePullPolicy: Never
        command:
          - /bin/sh
          - -c
          - |
            mlflow server \
            --backend-store-uri sqlite:///mlflow.db \
            --default-artifact-root /mlflow/artifacts \
            --host 0.0.0.0 \
            --port 5000 \
            --serve-artifacts
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: mlflow-artifacts
            mountPath: /mlflow/artifacts

      volumes:
        - name: mlflow-artifacts
          persistentVolumeClaim:
            claimName: mlflow-pvc
